--- a/index.HTML
+++ b/index.HTML
@@ -7,7 +7,7 @@
 <body>
     <div class="wrap">
         <div class="header">
-            <h1>semangat praktek</h1>
+            <h1>malas ngoding</h1>
             <p>Tutorial belajar membuat layout website sederhana</p>
         </div>
         <div class="menu">
@@ -38,3 +38,4 @@
     </div>
 </body>
 </html> 
+
